--- a/2. rag_with_chroma copy.ipynb
+++ b/2. rag_with_chroma copy.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
       "Requirement already satisfied: chroma-hnswlib==0.7.6 in ./venv310/lib/python3.10/site-packages (from chromadb) (0.7.6)\n",
       "Requirement already satisfied: fastapi>=0.95.2 in ./venv310/lib/python3.10/site-packages (from chromadb) (0.115.12)\n",
       "Requirement already satisfied: uvicorn>=0.18.3 in ./venv310/lib/python3.10/site-packages (from uvicorn[standard]>=0.18.3->chromadb) (0.34.0)\n",
-      "Requirement already satisfied: numpy>=1.22.5 in ./venv310/lib/python3.10/site-packages (from chromadb) (2.2.4)\n",
+      "Requirement already satisfied: numpy>=1.22.5 in ./venv310/lib/python3.10/site-packages (from chromadb) (1.26.4)\n",
       "Requirement already satisfied: posthog>=2.4.0 in ./venv310/lib/python3.10/site-packages (from chromadb) (3.21.0)\n",
       "Requirement already satisfied: typing_extensions>=4.5.0 in ./venv310/lib/python3.10/site-packages (from chromadb) (4.12.2)\n",
       "Requirement already satisfied: onnxruntime>=1.14.1 in ./venv310/lib/python3.10/site-packages (from chromadb) (1.19.2)\n",
@@ -205,7 +205,7 @@
       "Requirement already satisfied: jinja2 in ./venv310/lib/python3.10/site-packages (from torch>=1.11.0->sentence-transformers) (3.1.6)\n",
       "Requirement already satisfied: sympy==1.13.1 in ./venv310/lib/python3.10/site-packages (from torch>=1.11.0->sentence-transformers) (1.13.1)\n",
       "Requirement already satisfied: mpmath<1.4,>=1.1.0 in ./venv310/lib/python3.10/site-packages (from sympy==1.13.1->torch>=1.11.0->sentence-transformers) (1.3.0)\n",
-      "Requirement already satisfied: numpy>=1.17 in ./venv310/lib/python3.10/site-packages (from transformers<5.0.0,>=4.41.0->sentence-transformers) (2.2.4)\n",
+      "Requirement already satisfied: numpy>=1.17 in ./venv310/lib/python3.10/site-packages (from transformers<5.0.0,>=4.41.0->sentence-transformers) (1.26.4)\n",
       "Requirement already satisfied: regex!=2019.12.17 in ./venv310/lib/python3.10/site-packages (from transformers<5.0.0,>=4.41.0->sentence-transformers) (2024.11.6)\n",
       "Requirement already satisfied: tokenizers<0.22,>=0.21 in ./venv310/lib/python3.10/site-packages (from transformers<5.0.0,>=4.41.0->sentence-transformers) (0.21.1)\n",
       "Requirement already satisfied: safetensors>=0.4.3 in ./venv310/lib/python3.10/site-packages (from transformers<5.0.0,>=4.41.0->sentence-transformers) (0.5.3)\n",
@@ -219,6 +219,15 @@
       "\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0.1\u001b[0m\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Collecting docx2txt\n",
+      "  Downloading docx2txt-0.9-py3-none-any.whl.metadata (529 bytes)\n",
+      "Downloading docx2txt-0.9-py3-none-any.whl (4.0 kB)\n",
+      "Installing collected packages: docx2txt\n",
+      "Successfully installed docx2txt-0.9\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -226,12 +235,13 @@
    "source": [
     "%pip install chromadb\n",
     "%pip install langchain\n",
-    "%pip install sentence-transformers"
+    "%pip install sentence-transformers\n",
+    "%pip install docx2txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -251,11 +261,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_community.document_loaders import PyPDFLoader\n",
+    "from langchain_community.document_loaders import Docx2txtLoader\n",
     "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
     "from langchain_openai import OpenAIEmbeddings\n",
     "from dotenv import load_dotenv\n",
@@ -277,9 +288,12 @@
     "text_splitter = RecursiveCharacterTextSplitter(chunk_size=1500, chunk_overlap=200)\n",
     "\n",
     "# 문서 불러오기와 쪼개기를 한 번에 수행\n",
-    "file_path = \"text.pdf\"\n",
-    "loader = PyPDFLoader(file_path)\n",
-    "chunks = loader.load_and_split(text_splitter=text_splitter)\n",
+    "# XXX 현재 pdf에서는 원하는 데이터를 가져오지 못함\n",
+    "# pdf에서의 원하는 데이터는 사진 형식의 표로 들어가 있기 때문.\n",
+    "# gpt에서 표를 이해하는 방식은 모델에 따라 다르지만 openAI는 markdown으로 이해하기에 markdown으로 변환이 필요하다.\n",
+    "file_path = \"text.docx\"\n",
+    "loader = Docx2txtLoader(file_path)\n",
+    "document_list = loader.load_and_split(text_splitter)\n",
     "\n",
     "\n",
     "# 임베딩\n",
@@ -289,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +313,7 @@
     "# 벡터 데이터베이스 생성\n",
     "# chroma db는 인 메모리 벡터 데이터베이스\n",
     "database = Chroma.from_documents(\n",
-    "    documents=chunks,\n",
+    "    documents=document_list,\n",
     "    embedding=embeddings,\n",
     "    persist_directory=\"chroma_db\",\n",
     "    collection_name=\"tax_collection\"\n",
@@ -308,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,19 +333,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[Document(metadata={'creationdate': '', 'creator': 'PyPDF', 'page': 8, 'page_label': '9', 'producer': 'Aspose.Words for .NET 25.1.0', 'source': 'text.pdf', 'total_pages': 170}, page_content='소득세법\\n법제처 9\\n 국가법령정보센터\\n로서 대통령령으로 정하는 금액\\n\\u3000\\u3000\\u30001) 「발명진흥법」 제2조제2호에 따른 종업원등(이하 이 조, 제20조 및 제21조에서 “종업원등”이라 한다\\n)이 같은 호에 따른 사용자등(이하 이 조에서 “사용자등”이라 한다)으로부터 받는 보상금. 다만, 보상금을 지\\n급한 사용자등과 대통령령으로 정하는 특수관계에 있는 자가 받는 보상금은 제외한다.\\n\\u3000\\u3000\\u30002) 대학의 교직원 또는 대학과 고용관계가 있는 학생이 소속 대학에 설치된 「산업교육진흥 및 산학연\\n협력촉진에 관한 법률」 제25조에 따른 산학협력단(이하 이 조에서 “산학협력단”이라 한다)으로부터 같은 법 \\n제32조제1항제4호에 따라 받는 보상금\\n저. 대통령령으로 정하는 복리후생적 성질의 급여\\n처. 제20조제1항제6호에 따른 소득 중 다음의 요건을 모두 충족하는 소득으로서 대통령령으로 정하는 금액 \\n이하의 금액\\n1) 임원 또는 종업원(이하 이 조, 제20조 및 제164조의5에서 “임원등”이라 한다) 본인이 소비하는 것을 \\n목적으로 제공받거나 지원을 받아 구입한 재화 또는 용역으로서 대통령령으로 정하는 기간 동안 재\\n판매가 허용되지 아니할 것\\n2) 해당 재화 또는 용역의 제공과 관련하여 모든 임원등에게 공통으로 적용되는 기준이 있을 것\\n4. 연금소득 중 다음 각 목의 어느 하나에 해당하는 소득\\n가. 「국민연금법」, 「공무원연금법」 또는 「공무원 재해보상법」, 「군인연금법」 또는 「군인 재해보상법\\n」, 「사립학교교직원 연금법」, 「별정우체국법」 또는 「국민연금과 직역연금의 연계에 관한 법률」(이하 \\n“공적연금 관련법”이라 한다)에 따라 받는 유족연금ㆍ퇴직유족연금ㆍ퇴역유족연금ㆍ장해유족연금ㆍ상이\\n유족연금ㆍ순직유족연금ㆍ직무상유족연금ㆍ위험직무순직유족연금, 장애연금, 장해연금ㆍ비공무상 장해연\\n금ㆍ비직무상 장해연금, 상이연금(傷痍年金), 연계노령유족연금 또는 연계퇴직유족연금\\n나. 삭제<2013. 1. 1.>\\n다. 「산업재해보상보험법」에 따라 받는 각종 연금\\n라. 「국군포로의 송환 및 대우 등에 관한 법률」에 따른 국군포로가 받는 연금\\n마. 삭제<2013. 1. 1.>\\n5. 기타소득 중 다음 각 목의 어느 하나에 해당하는 소득\\n가. 「국가유공자 등 예우 및 지원에 관한 법률」 또는 「보훈보상대상자 지원에 관한 법률」에 따라 받는 보\\n훈급여금ㆍ학습보조비 및 「북한이탈주민의 보호 및 정착지원에 관한 법률」에 따라 받는 정착금ㆍ보로금\\n(報勞金)과 그 밖의 금품\\n나. 「국가보안법」에 따라 받는 상금과 보로금\\n다. 「상훈법」에 따른 훈장과 관련하여 받는 부상(副賞)이나 그 밖에 대통령령으로 정하는 상금과 부상\\n라. 종업원등 또는 대학의 교직원이 퇴직한 후에 사용자등 또는 산학협력단으로부터 지급받거나 대학의 학\\n생이 소속 대학에 설치된 산학협력단으로부터 받는 직무발명보상금으로서 대통령령으로 정하는 금액. \\n다만, 직무발명보상금을 지급한 사용자등 또는 산학협력단과 대통령령으로 정하는 특수관계에 있는 자\\n가 받는 직무발명보상금은 제외한다.'),\n",
-       " Document(metadata={'creationdate': '', 'creator': 'PyPDF', 'page': 129, 'page_label': '130', 'producer': 'Aspose.Words for .NET 25.1.0', 'source': 'text.pdf', 'total_pages': 170}, page_content='소득세법\\n법제처 130\\n 국가법령정보센터\\n에 따라 금융위원회에 등록한 온라인투자연계금융업자를 통하여 지급받는 이자소득에 대해서는 100분의 \\n14로 한다.\\n다. 제16조제1항제10호에 따른 직장공제회 초과반환금에 대해서는 기본세율\\n라. 그 밖의 이자소득에 대해서는 100분의 14\\n2. 배당소득에 대해서는 다음에 규정하는 세율\\n가. 제17조제1항제8호에 따른 출자공동사업자의 배당소득에 대해서는 100분의 25\\n나. 그 밖의 배당소득에 대해서는 100분의 14\\n3. 원천징수대상 사업소득에 대해서는 100분의 3. 다만, 외국인 직업운동가가 한국표준산업분류에 따른 스포\\n츠 클럽 운영업 중 프로스포츠구단과의 계약에 따라 용역을 제공하고 받는 소득에 대해서는 100분의 20으\\n로 한다.\\n4. 근로소득에 대해서는 기본세율. 다만, 일용근로자의 근로소득에 대해서는 100분의 6으로 한다.\\n5. 공적연금소득에 대해서는 기본세율\\n5의2.제20조의3제1항제2호나목 및 다목에 따른 연금계좌 납입액이나 운용실적에 따라 증가된 금액을 연금수\\n령한 연금소득에 대해서는 다음 각 목의 구분에 따른 세율. 이 경우 각 목의 요건을 동시에 충족하는 때에\\n는 낮은 세율을 적용한다.\\n가. 연금소득자의 나이에 따른 다음의 세율\\n나. 삭제<2014. 12. 23.>\\n다. 사망할 때까지 연금수령하는 대통령령으로 정하는 종신계약에 따라 받는 연금소득에 대해서는 100분의 \\n4\\n5의3. 제20조의3제1항제2호가목에 따라 퇴직소득을 연금수령하는 연금소득에 대해서는 다음 각 목의 구분에 \\n따른 세율. 이 경우 연금 실제 수령연차 및 연금외수령 원천징수세율의 구체적인 내용은 대통령령으로 정\\n한다.\\n가. 연금 실제 수령연차가 10년 이하인 경우: 연금외수령 원천징수세율의 100분의 70\\n나. 연금 실제 수령연차가 10년을 초과하는 경우: 연금외수령 원천징수세율의 100분의 60\\n6. 기타소득에 대해서는 다음에 규정하는 세율. 다만, 제8호를 적용받는 경우는 제외한다.\\n가. 제14조제3항제8호라목 및 마목에 해당하는 소득금액이 3억원을 초과하는 경우 그 초과하는 분에 대해\\n서는 100분의 30\\n나. 제21조제1항제18호 및 제21호에 따른 기타소득에 대해서는 100분의 15\\n다. 삭제<2014. 12. 23.>\\n라. 그 밖의 기타소득에 대해서는 100분의 20\\n7. 퇴직소득에 대해서는 기본세율'),\n",
-       " Document(metadata={'creationdate': '', 'creator': 'PyPDF', 'page': 37, 'page_label': '38', 'producer': 'Aspose.Words for .NET 25.1.0', 'source': 'text.pdf', 'total_pages': 170}, page_content='소득세법\\n법제처 38\\n 국가법령정보센터\\n득의 합계액을 총급여액으로 하여 제1항에 따라 계산한 근로소득공제액을 총급여액에서 공제한다.<개정 \\n2010. 12. 27.>\\n⑥ 삭제<2010. 12. 27.>\\n[전문개정 2009. 12. 31.]\\n제47조의2(연금소득공제) ①연금소득이 있는 거주자에 대해서는 해당 과세기간에 받은 총연금액(분리과세연금소\\n득은 제외하며, 이하 이 항에서 같다)에서 다음 표에 규정된 금액을 공제한다. 다만, 공제액이 900만원을 초\\n과하는 경우에는 900만원을 공제한다. <개정 2013. 1. 1.>\\n② 제1항에 따른 공제를 “연금소득공제”라 한다.\\n[전문개정 2009. 12. 31.]\\n제48조(퇴직소득공제) ① 퇴직소득이 있는 거주자에 대해서는 해당 과세기간의 퇴직소득금액에서 제1호의 구분\\n에 따른 금액을 공제하고, 그 금액을 근속연수(1년 미만의 기간이 있는 경우에는 이를 1년으로 보며, 제22조\\n제1항제1호의 경우에는 대통령령으로 정하는 방법에 따라 계산한 연수를 말한다. 이하 같다)로 나누고 12를 \\n곱한 후의 금액(이하 이 항에서 “환산급여”라 한다)에서 제2호의 구분에 따른 금액을 공제한다. <개정 2014. \\n12. 23., 2022. 12. 31.>\\n1. 근속연수에 따라 정한 다음의 금액\\n2. 환산급여에 따라 정한 다음의 금액'),\n",
-       " Document(metadata={'creationdate': '', 'creator': 'PyPDF', 'page': 44, 'page_label': '45', 'producer': 'Aspose.Words for .NET 25.1.0', 'source': 'text.pdf', 'total_pages': 170}, page_content='소득세법\\n법제처 45\\n 국가법령정보센터\\n② 거주자의 퇴직소득에 대한 소득세는 다음 각 호의 순서에 따라 계산한 금액(이하 “퇴직소득 산출세액”이\\n라 한다)으로 한다.<개정 2013. 1. 1., 2014. 12. 23.>\\n1. 해당 과세기간의 퇴직소득과세표준에 제1항의 세율을 적용하여 계산한 금액\\n2. 제1호의 금액을 12로 나눈 금액에 근속연수를 곱한 금액\\n3. 삭제<2014. 12. 23.>\\n[전문개정 2009. 12. 31.]\\n제2관 세액공제 <개정 2009. 12. 31.>\\n제56조(배당세액공제) ① 거주자의 종합소득금액에 제17조제3항 각 호 외의 부분 단서가 적용되는 배당소득금\\n액이 합산되어 있는 경우에는 같은 항 각 호 외의 부분 단서에 따라 해당 과세기간의 총수입금액에 더한 금\\n액에 해당하는 금액을 종합소득 산출세액에서 공제한다. <개정 2009. 12. 31.>\\n② 제1항에 따른 공제를 “배당세액공제”라 한다.<개정 2009. 12. 31.>\\n③ 삭제<2003. 12. 30.>\\n④ 제1항을 적용할 때 배당세액공제의 대상이 되는 배당소득금액은 제14조제2항의 종합소득과세표준에 포함\\n된 배당소득금액으로서 이자소득등의 종합과세기준금액을 초과하는 것으로 한다.<개정 2009. 12. 31.>\\n⑤ 삭제<2006. 12. 30.>\\n⑥ 배당세액공제액의 계산 등에 필요한 사항은 대통령령으로 정한다.<개정 2009. 12. 31.>\\n[제목개정 2009. 12. 31.]\\n제56조의2(기장세액공제) ① 제160조제3항에 따른 간편장부대상자가 제70조 또는 제74조에 따른 과세표준확정\\n신고를 할 때 복식부기에 따라 기장(記帳)하여 소득금액을 계산하고 제70조제4항제3호에 따른 서류를 제출하\\n는 경우에는 해당 장부에 의하여 계산한 사업소득금액이 종합소득금액에서 차지하는 비율을 종합소득 산출')]"
+       " Document(metadata={'source': 'text.docx'}, page_content='1. 「공익신탁법」에 따른 공익신탁의 이익\\n\\n2. 사업소득 중 다음 각 목의 어느 하나에 해당하는 소득\\n\\n가. 논ㆍ밭을 작물 생산에 이용하게 함으로써 발생하는 소득\\n\\n나. 1개의 주택을 소유하는 자의 주택임대소득(제99조에 따른 기준시가가 12억원을 초과하는 주택 및 국외에 소재하는 주택의 임대소득은 제외한다) 또는 해당 과세기간에 대통령령으로 정하는 총수입금액의 합계액이 2천만원 이하인 자의 주택임대소득(2018년 12월 31일 이전에 끝나는 과세기간까지 발생하는 소득으로 한정한다). 이 경우 주택 수의 계산 및 주택임대소득의 산정 등 필요한 사항은 대통령령으로 정한다.\\n\\n다. 대통령령으로 정하는 농어가부업소득\\n\\n라. 대통령령으로 정하는 전통주의 제조에서 발생하는 소득\\n\\n마. 조림기간 5년 이상인 임지(林地)의 임목(林木)의 벌채 또는 양도로 발생하는 소득으로서 연 600만원 이하의 금액. 이 경우 조림기간 및 세액의 계산 등 필요한 사항은 대통령령으로 정한다.\\n\\n바. 대통령령으로 정하는 작물재배업에서 발생하는 소득\\n\\n사. 대통령령으로 정하는 어로어업 또는 양식어업에서 발생하는 소득\\n\\n3. 근로소득과 퇴직소득 중 다음 각 목의 어느 하나에 해당하는 소득\\n\\n가. 대통령령으로 정하는 복무 중인 병(兵)이 받는 급여\\n\\n나. 법률에 따라 동원된 사람이 그 동원 직장에서 받는 급여\\n\\n다. 「산업재해보상보험법」에 따라 수급권자가 받는 요양급여, 휴업급여, 장해급여, 간병급여, 유족급여, 유족특별급여, 장해특별급여, 장의비 또는 근로의 제공으로 인한 부상ㆍ질병ㆍ사망과 관련하여 근로자나 그 유족이 받는 배상ㆍ보상 또는 위자(慰藉)의 성질이 있는 급여\\n\\n라. 「근로기준법」 또는 「선원법」에 따라 근로자ㆍ선원 및 그 유족이 받는 요양보상금, 휴업보상금, 상병보상금(傷病補償金), 일시보상금, 장해보상금, 유족보상금, 행방불명보상금, 소지품 유실보상금, 장의비 및 장제비\\n\\n마. 「고용보험법」에 따라 받는 실업급여, 육아휴직 급여, 육아기 근로시간 단축 급여, 출산전후휴가 급여등, 「제대군인 지원에 관한 법률」에 따라 받는 전직지원금, 「국가공무원법」ㆍ「지방공무원법」에 따른 공무원 또는 「사립학교교직원 연금법」ㆍ「별정우체국법」을 적용받는 사람이 관련 법령에 따라 받는 육아휴직수당(「사립학교법」 제70조의2에 따라 임명된 사무직원이 학교의 정관 또는 규칙에 따라 지급받는 육아휴직수당으로서 대통령령으로 정하는 금액 이하의 것을 포함한다)\\n\\n바. 「국민연금법」에 따라 받는 반환일시금(사망으로 받는 것만 해당한다) 및 사망일시금'),\n",
+       " Document(metadata={'creationdate': '', 'creator': 'PyPDF', 'page': 129, 'page_label': '130', 'producer': 'Aspose.Words for .NET 25.1.0', 'source': 'text.pdf', 'total_pages': 170}, page_content='소득세법\\n법제처 130\\n 국가법령정보센터\\n에 따라 금융위원회에 등록한 온라인투자연계금융업자를 통하여 지급받는 이자소득에 대해서는 100분의 \\n14로 한다.\\n다. 제16조제1항제10호에 따른 직장공제회 초과반환금에 대해서는 기본세율\\n라. 그 밖의 이자소득에 대해서는 100분의 14\\n2. 배당소득에 대해서는 다음에 규정하는 세율\\n가. 제17조제1항제8호에 따른 출자공동사업자의 배당소득에 대해서는 100분의 25\\n나. 그 밖의 배당소득에 대해서는 100분의 14\\n3. 원천징수대상 사업소득에 대해서는 100분의 3. 다만, 외국인 직업운동가가 한국표준산업분류에 따른 스포\\n츠 클럽 운영업 중 프로스포츠구단과의 계약에 따라 용역을 제공하고 받는 소득에 대해서는 100분의 20으\\n로 한다.\\n4. 근로소득에 대해서는 기본세율. 다만, 일용근로자의 근로소득에 대해서는 100분의 6으로 한다.\\n5. 공적연금소득에 대해서는 기본세율\\n5의2.제20조의3제1항제2호나목 및 다목에 따른 연금계좌 납입액이나 운용실적에 따라 증가된 금액을 연금수\\n령한 연금소득에 대해서는 다음 각 목의 구분에 따른 세율. 이 경우 각 목의 요건을 동시에 충족하는 때에\\n는 낮은 세율을 적용한다.\\n가. 연금소득자의 나이에 따른 다음의 세율\\n나. 삭제<2014. 12. 23.>\\n다. 사망할 때까지 연금수령하는 대통령령으로 정하는 종신계약에 따라 받는 연금소득에 대해서는 100분의 \\n4\\n5의3. 제20조의3제1항제2호가목에 따라 퇴직소득을 연금수령하는 연금소득에 대해서는 다음 각 목의 구분에 \\n따른 세율. 이 경우 연금 실제 수령연차 및 연금외수령 원천징수세율의 구체적인 내용은 대통령령으로 정\\n한다.\\n가. 연금 실제 수령연차가 10년 이하인 경우: 연금외수령 원천징수세율의 100분의 70\\n나. 연금 실제 수령연차가 10년을 초과하는 경우: 연금외수령 원천징수세율의 100분의 60\\n6. 기타소득에 대해서는 다음에 규정하는 세율. 다만, 제8호를 적용받는 경우는 제외한다.\\n가. 제14조제3항제8호라목 및 마목에 해당하는 소득금액이 3억원을 초과하는 경우 그 초과하는 분에 대해\\n서는 100분의 30\\n나. 제21조제1항제18호 및 제21호에 따른 기타소득에 대해서는 100분의 15\\n다. 삭제<2014. 12. 23.>\\n라. 그 밖의 기타소득에 대해서는 100분의 20\\n7. 퇴직소득에 대해서는 기본세율')]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,16 +380,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'연봉 3,000만원인 직장인의 소득세를 계산하기 위해서는 근로소득공제를 적용한 후 과세표준을 구하고, 이에 해당하는 세율을 적용해야 합니다. 다음은 대략적인 계산 절차입니다.\\n\\n1. **근로소득공제**: 연봉을 근로소득으로 보고 일정한 비율로 공제합니다. 소득세법에 따르면 3,000만원의 소득에 대한 근로소득공제는 다음과 같습니다.\\n   - 500만원 이하: 전액\\n   - 500만원 초과 ~ 1,500만원 이하: 30%\\n   - 1,500만원 초과 ~ 4,500만원 이하: 110만원 + 19%\\n\\n   따라서, 3,000만원의 근로소득에 대한 근로소득공제는:\\n   - 1,500만원까지: 500만원 * 100% + 1,000만원 * 30% = 500만원 + 300만원 = 800만원\\n   - 나머지 1,500만원에 대해: (3,000만원 - 1,500만원) * 19% = 285만원\\n\\n   총 근로소득공제액 = 800만원 + 285만원 = 1,085만원\\n\\n2. **과세표준**: 연봉에서 근로소득공제를 차감하여 과세표준을 구합니다.\\n   - 과세표준 = 3,000만원 - 1,085만원 = 1,915만원\\n\\n3. **소득세 계산**: 과세표준에 소득세율을 적용합니다. 소득세율은 다음과 같습니다 (2023년 기준):\\n   - 1,200만원 이하: 6%\\n   - 1,200만원 초과 ~ 4,600만원 이하: 72만원 + 초과분의 15%\\n\\n   따라서, 1,915만원에 대한 소득세는:\\n   - 1,200만원까지: 1,200만원 * 6% = 72만원\\n   - 나머지 715만원에 대해: 715만원 * 15% = 107.25만원\\n\\n   따라서, 총 소득세는 72만원 + 107.25만원 = 179.25만원\\n\\n4. **지방소득세**: 소득세의 10%가 추가로 과세됩니다.\\n   - 지방소득세 = 179.25만원 * 10% = 17.925만원\\n\\n5. **총 세액**: 소득세와 지방소득세를 합산합니다.\\n   - 총 세액 = 179.25만원 + 17.925만원 = 197.175만원\\n\\n따라서, 연봉 3,000만원인 직장인은 약 197.175만원의 소득세를 납부하게 됩니다. 실제 납부할 세금은 각 개인의 공제 항목 및 분리 과세 항목에 따라 달라질 수 있습니다. 반드시 세무 전문가나 국세청에서 제공하는 소득세 계산기를 통해 정확한 금액을 확인하시기 바랍니다.'"
+       "'연봉 3000만원인 직장인의 소득세를 계산하기 위해서는 기본적으로 과세표준을 결정하고, 해당 과세표준에 해당하는 세율을 적용해야 합니다. 소득세 계산 과정은 다음과 같습니다:\\n\\n1. **총급여**: 연봉 3000만원\\n\\n2. **근로소득공제**: 근로소득공제는 총급여에 따라 차등 적용됩니다. 연봉 3000만원의 경우, 근로소득공제는 일반적으로 다음과 같은 방식으로 계산됩니다:\\n    - 총급여가 3,300만원 이하인 경우: 총급여액 × 70%\\n    예: 3000만원 × 0.7 = 2,100만원\\n\\n3. **과세표준**: 총급여에서 근로소득공제를 뺀 금액\\n    - `과세표준 = 총급여 - 근로소득공제`\\n    - 3,000만원 - 2,100만원 = 900만원\\n\\n4. **소득세 계산**: 2023년 기준 소득세 세율에 따르면,\\n     - 과세표준 1,200만원 이하: 6%\\n     - 따라서, 900만원 × 0.06 = 54만원\\n\\n5. **누진공제**: 누진 공제는 과세표준 구간에 따라 적용되지 않기 때문에 그대로 소득세 금액으로 봅니다.\\n\\n따라서, 연봉 3000만원인 직장인의 소득세는 약 54만원이 됩니다. 단, 실제 소득세액은 각종 세액 공제와 지방세 등을 추가로 고려해야 하므로, 실제 납부할 세금은 다를 수 있습니다. 세부적인 사항은 세무 전문가나 국세청 상담을 통해 확인하시는 것이 좋습니다.'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +431,7 @@
        "ChatPromptTemplate(input_variables=['context', 'question'], input_types={}, partial_variables={}, metadata={'lc_hub_owner': 'rlm', 'lc_hub_repo': 'rag-prompt', 'lc_hub_commit_hash': '50442af133e61576e74536c6556cefe1fac147cad032f4377b60c436e6cdcb6e'}, messages=[HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=['context', 'question'], input_types={}, partial_variables={}, template=\"You are an assistant for question-answering tasks. Use the following pieces of retrieved context to answer the question. If you don't know the answer, just say that you don't know. Use three sentences maximum and keep the answer concise.\\nQuestion: {question} \\nContext: {context} \\nAnswer:\"), additional_kwargs={})])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,21 +466,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'query': '연봉 3000만원인 직장인의 소득세는 얼마인가요?',\n",
-       " 'result': '연봉 3,000만 원인 직장인의 소득세는 기본세율이 적용됩니다. 소득세는 세율과 소득수준, 공제 등에 따라 달라지므로 정확한 금액은 계산이 필요합니다. 소득세율은 소득구간에 따라 점진적으로 증가하므로, 본인의 상황에 맞게 계산해야 합니다.'}"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ai_message"
    ]
